# edge-tts-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerWarnings.cmake  Dependencies.cmake  (+9 more)
examples/consumer_add_subdirectory/: CMakeLists.txt  main.cpp
examples/consumer_find_package/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/api/: CommunicateEndToEndTests.cpp  CommunicateNetworkTests.cpp  CommunicateOptionsTests.cpp  CommunicateProductionWiringTests.cpp  CommunicateTests.cpp  FileWriterTests.cpp  OfflineIntegrationTests.cpp  SpeechSynthesizerEndToEndTests.cpp  SpeechSynthesizerNetworkTests.cpp  SpeechSynthesizerTests.cpp  SpeechSynthesizerWiringTests.cpp  SynthesisOptionsTests.cpp
tests/cli/: EdgeTtsArgumentParserTests.cpp  EdgeTtsCommandDispatcherTests.cpp  InputLoaderTests.cpp  ListVoicesProductionPathTests.cpp  PlaybackCommandDispatcherTests.cpp  VoiceFormatterTests.cpp  test_cli.cpp
tests/cmake/: test_cmake_source_dir_regression.py  test_consumer_add_subdirectory.py  test_consumer_examples.py  test_consumer_strict_warnings.py  test_dependency_config.py  test_install_components.py  test_install_tree.py  test_installed_header_selfcontainment.py  test_linkage_mode.py  test_package_version.py  test_public_tts_target.py  test_umbrella_header_hygiene.py
tests/cmake/consumer_add_subdirectory_basic/: CMakeLists.txt  main.cpp
tests/cmake/consumer_install_basic/: CMakeLists.txt  main.cpp
tests/cmake/consumer_static_build/: CMakeLists.txt  main.cpp
tests/cmake/consumer_strict_warnings/: CMakeLists.txt  main.cpp
tests/cmake/consumer_tts_target_basic/: CMakeLists.txt  main.cpp
tests/common/: ClockTests.cpp  ErrorTests.cpp  HexTests.cpp  IdGeneratorTests.cpp  ResultTests.cpp  Sha256Tests.cpp  Utf8Tests.cpp  test_main.cpp
tests/communication/: CommunicateStyleFlowTests.cpp  ConnectionMetadataTests.cpp  EdgeProtocolIncomingTests.cpp  EdgeProtocolSpeechConfigTests.cpp  EdgeProtocolSsmlFrameTests.cpp  EdgeRequestHeadersTests.cpp  EdgeServiceConfigTests.cpp  EdgeTokenProviderTests.cpp  FakeWebSocketClientTests.cpp  HttpClientInterfaceTests.cpp  HttpClientNetworkTests.cpp  HttpClientTests.cpp  HttpDateTests.cpp  RetryPolicyTests.cpp  SynthesisSessionTests.cpp  VoiceServiceTests.cpp  WebSocketClientNetworkTests.cpp  WebSocketClientTests.cpp  WebSocketFrameHelpers.hpp
tests/core/: ChunkTests.cpp  OutputFormatTests.cpp  TtsConfigTests.cpp  VoiceTests.cpp  test_text_chunker.cpp  test_tts_config.cpp  test_voice.cpp
tests/docs/: test_cli_compatibility_doc.py  test_required_reference_docs.py
tests/headers/: umbrella_consumer_test.cpp
tests/media/: ExecutableDiscoveryTests.cpp  FfmpegAudioConverterTests.cpp  ProcessRunnerTests.cpp
tests/network/: RealSynthesisSmokeTests.cpp  RealVoiceListTests.cpp
tests/serialization/: MetadataJsonParserTests.cpp  ProtocolFrameTests.cpp  SsmlBuilderTests.cpp  TextChunkerTests.cpp  TextNormalizerTests.cpp  VoiceJsonParserTests.cpp  XmlEscaperTests.cpp
tests/serialization/fixtures/: metadata_unknown.json  metadata_word.json  protocol_basic.txt  voices_valid.json
tests/subtitles/: SrtComposerTests.cpp  SubMakerTests.cpp  SubtitleTimeTests.cpp  test_srt_composer.cpp
tests/support/: ChunkTestHelpers.hpp  FakeHttpClient.cpp  FakeProcessRunner.cpp  FakeWebSocketClient.cpp  WebSocketFrameHelpers.hpp
tests/support/communication/: FakeHttpClient.hpp  FakeWebSocketClient.hpp
tests/support/edge_tts/communication/: FakeHttpClient.hpp
tests/support/media/: FakeProcessRunner.hpp
tests/tools/: test_consumer_readiness.py  test_module_boundaries.py  test_network_hygiene.py  test_public_headers.py  test_repository_hygiene.py
tests/tools/module_boundary_fixtures/allowed/include/edge_tts/api/: ApiHeader.hpp
tests/tools/module_boundary_fixtures/allowed/include/edge_tts/communication/: CommHeader.hpp
tests/tools/module_boundary_fixtures/allowed/include/edge_tts/core/: CoreUsesCommon.hpp
tests/tools/module_boundary_fixtures/allowed/modules/api/include/api/: ApiHeader.hpp
tests/tools/module_boundary_fixtures/allowed/modules/api/src/: ApiUsesCommunication.cpp
tests/tools/module_boundary_fixtures/allowed/modules/communication/include/communication/: CommHeader.hpp
tests/tools/module_boundary_fixtures/allowed/modules/communication/src/: CommUsesAll.cpp
tests/tools/module_boundary_fixtures/allowed/modules/serialization/src/: SerializationUsesCore.cpp
tests/tools/module_boundary_fixtures/allowed/src/api/: ApiUsesCommunication.cpp
tests/tools/module_boundary_fixtures/allowed/src/communication/: CommUsesAll.cpp
tests/tools/module_boundary_fixtures/allowed/src/serialization/: SerializationUsesCore.cpp
tests/tools/module_boundary_fixtures/forbidden/apps/edge-tts/: AppPrivateInclude.cpp
tests/tools/module_boundary_fixtures/forbidden/include/edge_tts/common/: CommonUsesCore.hpp
tests/tools/module_boundary_fixtures/forbidden/modules/api/src/: ApiUsesCli.cpp
tests/tools/module_boundary_fixtures/forbidden/modules/cli/src/: CliUsesCommunication.cpp  CliUsesSerialization.cpp
tests/tools/module_boundary_fixtures/forbidden/modules/communication/src/: CommUsesMedia.cpp  CommUsesSubtitles.cpp
tests/tools/module_boundary_fixtures/forbidden/modules/core/src/: CoreUsesSerialization.cpp
tests/tools/module_boundary_fixtures/forbidden/modules/media/src/: MediaUsesCommunication.cpp
tests/tools/module_boundary_fixtures/forbidden/modules/serialization/src/: SerializationUsesCommunication.cpp
tests/tools/module_boundary_fixtures/forbidden/src/api/: ApiUsesCli.cpp
tests/tools/module_boundary_fixtures/forbidden/src/cli/: CliUsesCommunication.cpp  CliUsesSerialization.cpp
tests/tools/module_boundary_fixtures/forbidden/src/communication/: CommUsesMedia.cpp  CommUsesSubtitles.cpp
tests/tools/module_boundary_fixtures/forbidden/src/core/: CoreUsesSerialization.cpp
tests/tools/module_boundary_fixtures/forbidden/src/media/: MediaUsesCommunication.cpp
tests/tools/module_boundary_fixtures/forbidden/src/serialization/: SerializationUsesCommunication.cpp
(+332 files in other folders)
